crates/popcorntime-graphql-client/src/snapshots/popcorntime_graphql_client__reactions__tests__delete_favorite_mutation_gql_output.snap
---
source: crates/popcorntime-graphql-client/src/reactions.rs
expression: operation.query
---
mutation SetReactionMutation($mediaId: Int!, $reaction: UserReactionType) {
  setReaction(mediaId: $mediaId, reaction: $reaction)
}
